--- a/sass/layout/_headerNormal.scss
+++ b/sass/layout/_headerNormal.scss
@@ -2,12 +2,13 @@ header{
     position: sticky;
     top:0;
     z-index: 9999;
-    background-color: #3e444a05;
-    box-shadow: 0.1em 0.2em 0.2em #252b3010;
-    border: 1px solid #94969b00;
-    border-right: 1px solid #55595e20;
-    border-bottom: 1px solid #55595e20;
-    border-left: 1px solid #ffffff30;
+    background-color: #F7F7F7;
+    // background-color: transparent;
+    // box-shadow: 0.1em 0.2em 0.2em #252b3010;
+    // border: 1px solid #94969b00;
+    // border-right: 1px solid #55595e20;
+    // border-bottom: 1px solid #55595e20;
+    // border-left: 1px solid #ffffff30;
     backdrop-filter: blur(0.5em);
     padding: 1em 0;
     transition: top .3s;
@@ -54,7 +55,6 @@ header{
 }
 .headerNormalContain .mainMenu a:hover{
     color: #394897;
-    font-weight: 500;
 }
 // .headerNormalContain .mainMenu li .memberList{
 //     display: flex;
@@ -197,7 +197,7 @@ header{
         display: none;
     }
     .headerNormalContain .mainMenu ul li {
-        padding: 10px 0;
+        padding: 15px 0;
         box-sizing: border-box;
     }
     .headerNormalContain .mainMenu ul li label{
