--- a/sass/page/_component.scss
+++ b/sass/page/_component.scss
@@ -65,7 +65,7 @@ img {
 .bouncingBox .title p {
     flex-grow: 1;
     padding: 0.5em 0;
-    border-bottom: 1px solid #000;
+    // border-bottom: 1px solid #000;
     /* 為了 .bouncingBox .title p .button 設置 */
     display: flex;
     justify-content: space-between;
