--- a/sass/page/_articleAll.scss
+++ b/sass/page/_articleAll.scss
@@ -5,7 +5,7 @@
     margin:60px auto ;
     box-sizing: border-box;
     // 報紙效果
-    background-color: #fbf7f3;
+    background-color: #F7F7F7;
     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
     box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
 }
