--- a/sass/page/_articlePage.scss
+++ b/sass/page/_articlePage.scss
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     margin:40px auto;
     // 報紙效果
-    background-color: #fbf7f3;
+    background-color: #F7F7F7;
     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
     box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
 }
@@ -21,6 +21,7 @@
 /* 所有圖片width:100%設定 */
 .articlePageContent .pic img{
     width: 100%;
+    vertical-align: middle;
 }
 .articlePageContent .articlePageWrap .sideInfo{
     display: none;
@@ -59,6 +60,19 @@
     transition: .3s;
     transform: scale(1.02);
     cursor: pointer;
+    padding: 5px;
+    box-sizing: border-box;
+
+    // 透明物件
+    border-radius: 200px;
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    // background-color: #3e444a10;
+    background-color: #ffffff50;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff30;
+    backdrop-filter: blur(0.5em);
 }
 .articlePageContent .articlePageWrap .pageContent .authorShortIntro .report .pic img:hover{
     content: url(../image/articlePage_authorShortIntro_exclamationHover.png);
@@ -105,32 +119,89 @@
 }
 .articlePageContent .articlePageWrap .pageContent .shareBar .shareComment{
     display: flex;
+    align-items: center;
 }
 // share圖片hover變大
 .articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .pic:hover{
     transition: .3s;
     transform: scale(1.02);
 }
-.articlePageContent .articlePageWrap .pageContent .shareBar .shareComment  .pic:last-child{
+// 分享icon
+.articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .pic:last-child{
     margin-left: 20px;
+    padding: 5px;
+    box-sizing: border-box;
+
+    // 透明物件
+    border-radius: 200px;
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    // background-color: #3e444a10;
+    background-color: #ffffff50;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff30;
+    backdrop-filter: blur(0.5em);
 }
 .articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .like{
+    display: flex;  
+    align-items: center;
+
+    border-radius:600px;
+    opacity: 80%;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    align-items: center;
+    cursor: pointer;
+    // 透明物件
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    // background-color: #3e444a10;
+    background-color: #ffffff50;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff30;
+    backdrop-filter: blur(0.5em);
+}
+.articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .like .pic{
+    width: 20px;
+    margin: 0 5px;
     display: flex;
     align-items: center;
 }
+.articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .like .pic img{
+    width: 100%;
+    vertical-align: bottom;
+    transition: .3s;
+}
 .articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .like .pic img:hover{
-    content: url(../image/articlePage_shareBar_likeHover.png);
+    content: url(../image/all_like_hover.png);
 }
 .articlePageContent .articlePageWrap .pageContent .shareBar .shareComment .pic:last-child img:hover{
     content: url(../image/articlePage_shareBar_commentHover.png);
 }
 .articlePageContent .articlePageWrap .pageContent .shareBar .socialMedia{
     display: flex;
+    align-items: center;
 }
 .articlePageContent .articlePageWrap .pageContent .shareBar .socialMedia .pic{
     margin: 0px 5px;
     transition: .3s;
     transform: scale(1.02);
+
+    padding: 5px;
+    box-sizing: border-box;
+
+    // 透明物件
+    border-radius: 200px;
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    // background-color: #3e444a10;
+    background-color: #ffffff50;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff30;
+    backdrop-filter: blur(0.5em);
 }
 /* 分享圖片hover */
 .articlePageContent .articlePageWrap .pageContent .shareBar .socialMedia .pic img:hover{
@@ -155,7 +226,7 @@
     margin: auto;
 }
 .articlePageContent .articlePageWrap .pageContent .relative h2{
-    border-bottom: 2px solid #8888;
+    border-bottom: 1px solid #8888;
 }
 .articlePageContent .articlePageWrap .pageContent .relative .item{
     display: flex;
