--- a/sass/page/_myListing.scss
+++ b/sass/page/_myListing.scss
@@ -14,9 +14,11 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-bottom: 2em;
-    border-bottom: 1px solid #000;
+    padding: 2em 0;
+    // border-bottom: 1px solid #000;
     margin-top: 2em;
+    background-color: #ffffff50;
+    border-radius: 1em;
 }
 
 .myListing_bouncing main .commodityGroup .commodity:first-child {
@@ -80,9 +82,9 @@
     margin-bottom: 1em;
 }
 
-.myListing_bouncing main .commodityGroup .commodity .bid .button {
-    // font-weight: 900;
-}
+// .myListing_bouncing main .commodityGroup .commodity .bid .button {
+//     // font-weight: 900;
+// }
 
 
 /*
