--- a/sass/page/_articlePost.scss
+++ b/sass/page/_articlePost.scss
@@ -87,7 +87,8 @@
 .articlePostContent .articlePreview h2{
     padding-left:20px ;
 }
-.articlePostContent .articlePreview input{   border: none;
+.articlePostContent .articlePreview input{   
+    border: none;
     resize: none;
     width: 100%;
     box-shadow: none;
@@ -96,11 +97,13 @@
     line-height: 2;
 	letter-spacing:2px;
 }
-.articlePostContent .articlePreview textarea{   border: none;
+.articlePostContent .articlePreview textarea{   
+    border: none;
     resize: none;
     width: 100%;
     box-shadow: none;
     background-color: none;
+    // 限制兩行
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
