--- a/html/layout/headerNormal.html
+++ b/html/layout/headerNormal.html
@@ -10,10 +10,18 @@
                         </a>
                 </div>
             </section>
-            <div class="hamburger"></div>
             <nav class="mainMenu fullscreen">
-                <ul>    
-                    <li style="--animation-order: 1;">
+                <ul>
+                    <li class="--animation-order: 1;">
+                        <div class="logoContain">
+                            <div class="logo">
+                                <a href="homePage.html">
+                                    <img src="assets/image/all_logo.png">
+                                </a>
+                            </div>
+                        </div>
+                    </li> 
+                    <li style="--animation-order: 2;">
                         <input id="navMenu" type="checkbox">
                         <label for="navMenu" class="deepColor">
                             <a href="galleryDoor.html" class="deepColor">
@@ -31,49 +39,36 @@
                             <li><a href="galleryAll/gallery/gallery.html" class="lightColor">品牌合作</a></li>
                         </ul>
                     </li>
-                    <li style="--animation-order: 2;" >
+                    <li style="--animation-order: 3;" >
                         <a href="prouductAll.html" class="deepColor">拍賣廳</a>
                     </li>
-                    <li style="--animation-order: 3;">
+                    <li style="--animation-order: 4;">
                         <a href="articleAll.html" class="deepColor">藝論</a>
                     </li>
-                    <li style="--animation-order: 4;">
+                    <li style="--animation-order: 5;">
                         <a href="about.html" class="deepColor">關於我們</a>
                     </li>
-                    <li style="--animation-order: 5;">
+                    <li style="--animation-order: 6;">
                         <a href="3dSurroundView.html" class="deepColor">會員中心</a>
                     </li>
-                    <!-- <li style="--animation-order: 6;">
-                        <section class="memberList">
-                            <div class="icon">
-                                    <a href="">
-                                        <img src="assets/image/home_header_iconBell.png">
-                                    </a>
-                            </div>
-                            <div class="icon">
-                                    <a href="3dSurroundView.html">
-                                        <img src="assets/image/home_header_iconMember.png">
-                                    </a>
-                            </div>
-                        </section>
-                    </li> -->
-                    <li style="--animation-order: 6;">
+                    <li style="--animation-order: 7;">
                         <div class="login">
                             <a href="login.html" class="whiteRound">登入</a>
                             <a href="listing.html" class="round">上架</a>
-                            <div class="notice header">
-                                <i class="fas fa-bell"></i>
-                                <!-- 通知紅點 -->
-                                <span class="notice_dot">
-                                    <span class="notice_dotNumber">99</span>
-                                </span>
-                            </div>
                         </div>
                     </li>
+                    <div class="close">
+                        <div></div>
+                    </div>
                 </ul>
-                <div class="close">
-                    <div></div>
-                </div>
             </nav>
+            <div class="noticeHeader  transparent">
+                <i class="fas fa-bell"></i>
+                <!-- 通知紅點 -->
+                <span class="notice_dot">
+                    <span class="notice_dotNumber">99</span>
+                </span>
+            </div>
+            <div class="hamburger"></div>
         </section>
     </header>
