--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,6 +32,7 @@
 @import 'page/customCharacter';
 @import 'page/myListing';
 @import 'page/notice';
+@import '../assets/3dCss/pannellum.css';
 //商品刊登
 @import 'page/listing';
 //藝廊
