--- a/sass/page/_3dSurroundView.scss
+++ b/sass/page/_3dSurroundView.scss
@@ -12,7 +12,7 @@
         //最大寬度 .size 覆蓋
         // max-width: none;
         // width: 100%;
-        .hamburger{
+        .hamburger {
             position: fixed;
             top: 10px;
             // background-color: #3e444a05;
@@ -24,7 +24,6 @@
             background: #eeeeee66;
             backdrop-filter: blur(0.5em);
         }
-    
         .hamburger {
             right: 10px;
             width: 50px;
@@ -91,6 +90,12 @@
     margin-left: -17.5px;
     margin-top: -74px;
     white-space: nowrap;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e80;
+    border-bottom: 1px solid #55595e80;
+    border-left: 1px solid #ffffff80;
+    -webkit-backdrop-filter: blur(1em);
+    backdrop-filter: blur(1em);
 }
 
 .consumptionRecord span {
@@ -99,6 +104,12 @@
     margin-left: -17.5px;
     margin-top: -74px;
     white-space: nowrap;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e80;
+    border-bottom: 1px solid #55595e80;
+    border-left: 1px solid #ffffff80;
+    -webkit-backdrop-filter: blur(1em);
+    backdrop-filter: blur(1em);
 }
 
 .collect span {
@@ -107,6 +118,12 @@
     margin-left: -17.5px;
     margin-top: -74px;
     white-space: nowrap;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e80;
+    border-bottom: 1px solid #55595e80;
+    border-left: 1px solid #ffffff80;
+    -webkit-backdrop-filter: blur(1em);
+    backdrop-filter: blur(1em);
 }
 
 .myListing span {
@@ -115,6 +132,12 @@
     margin-left: -17.5px;
     margin-top: -74px;
     white-space: nowrap;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e80;
+    border-bottom: 1px solid #55595e80;
+    border-left: 1px solid #ffffff80;
+    -webkit-backdrop-filter: blur(1em);
+    backdrop-filter: blur(1em);
 }
 
 .customCharacter span {
@@ -123,6 +146,12 @@
     margin-left: -17.5px;
     margin-top: -74px;
     white-space: nowrap;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e80;
+    border-bottom: 1px solid #55595e80;
+    border-left: 1px solid #ffffff80;
+    -webkit-backdrop-filter: blur(1em);
+    backdrop-filter: blur(1em);
 }
 
 
@@ -236,7 +265,6 @@ div.custom-tooltip span {
     // div.custom-tooltip span {
     //     visibility: hidden;
     // }
-
     div.custom-tooltip:hover span:after {
         content: '';
         position: absolute;
@@ -297,4 +325,19 @@ div.custom-tooltip span {
         flex-wrap: wrap;
         flex-direction: column;
     }
+}
+
+.round3dBtn {
+    text-decoration: none;
+    padding: 10px 25px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 200px;
+    -webkit-transition: .3s;
+    transition: .3s;
+    margin: 0 2px;
+}
+
+.titleButton {
+    font-size: 0.5em;
 }
