--- a/sass/page/_component.scss
+++ b/sass/page/_component.scss
@@ -22,6 +22,16 @@
     padding-right: 2.5em;
     max-height: 85%;
     overflow-y: scroll;
+    // margin-top: 10em;
+}
+
+@media(max-width:768px) {
+    .bouncingBox main {
+        padding-right: 2.5em;
+        height: 500px;
+        overflow-y: auto;
+        margin-top: 4em;
+    }
 }
 
 
