--- a/sass/page/_articlePost.scss
+++ b/sass/page/_articlePost.scss
@@ -3,7 +3,7 @@
     padding: 50px 0 100px;
     box-sizing: border-box;
     // 背景圖
-    background: #ffffff url(../../assets/image/all_bgimg.png) scroll no-repeat 50% 50% / 100% 100%;;
+    background: #ffffff url(../../assets/image/all_bgimg.png) scroll no-repeat 50% 50% / auto 100%;
 }
 .articlePostContent{
     width: 90%;
@@ -84,50 +84,57 @@
     margin: 10px;
 }
 // 預覽區 //
-.articlePostContent .articlePreview h2{
-    padding-left:20px ;
+.articlePostContent .articlePreview{
+    display: none;
 }
-.articlePostContent .articlePreview input{   
-    border: none;
-    resize: none;
-    width: 100%;
-    box-shadow: none;
-    background-color: none;
-    font-size: 1.25em;
-    line-height: 2;
-	letter-spacing:2px;
-}
-.articlePostContent .articlePreview textarea{   
-    border: none;
-    resize: none;
-    width: 100%;
-    box-shadow: none;
-    background-color: none;
-    // 限制兩行
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.articlePostContent .articlePreview .page{
-    width: 98%;
-    padding: 20px;
-    box-sizing: border-box;
-    display: block;
-    margin:0 auto 20px;
-    background-color: #F7F7F7;
-    background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
-    box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
-}
-.articlePostContent .articlePreview .item .pic{
-    width: 100%;
-    max-height: 400px;
-    overflow: hidden;
-    margin-bottom: 20px;
-}
+// .articlePostContent .articlePreview h2{
+//     padding-left:20px ;
+// }
+// .articlePostContent .articlePreview input{   
+//     border: none;
+//     resize: none;
+//     width: 100%;
+//     box-shadow: none;
+//     background-color: none;
+//     font-size: 1.25em;
+//     line-height: 2;
+// 	letter-spacing:2px;
+// }
+// .articlePostContent .articlePreview textarea{   
+//     border: none;
+//     resize: none;
+//     width: 100%;
+//     box-shadow: none;
+//     background-color: none;
+//     // 限制兩行
+//     display: -webkit-box;
+//     -webkit-line-clamp: 2;
+//     -webkit-box-orient: vertical;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+// }
+// .articlePostContent .articlePreview .page{
+//     width: 98%;
+//     padding: 20px;
+//     box-sizing: border-box;
+//     display: block;
+//     margin:0 auto 20px;
+//     background-color: #F7F7F7;
+//     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
+//     box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
+// }
+// .articlePostContent .articlePreview .item .pic{
+//     width: 100%;
+//     max-height: 400px;
+//     overflow: hidden;
+//     margin-bottom: 20px;
+// }
 
 @media screen and (min-width:768px){
+    .articlePostWrap{
+        // 背景圖
+        background: #ffffff url(../../assets/image/all_bgimg.png) scroll no-repeat 50% 50% / 100% 100%;
+    }
     .articlePostContent{
         display: flex;
     }
@@ -150,10 +157,11 @@
     }
     // 預覽區 //
     .articlePostContent .articlePreview{
-        width: 38%;
-        margin:auto;
-        position: sticky;
-        top: 0;
+        position: relative;
+        display: flex;
+        width: 40%;
+        justify-content: center;
+        align-items: flex-end;
     }
     // //轉成左右分割線
     // .articlePostContent .articleEdit::before{
