還沒搞定的敘述滾輪、藝廊加上div放動畫

--- a/sass/page/_product.scss
+++ b/sass/page/_product.scss
@@ -287,7 +287,13 @@
 .productiMainProduct .productSelector{
     width: 90%;
     margin: auto;
-    background-color: #FFD60A;
+    box-sizing: border-box;
+    padding: 0.5%;
+    margin-bottom: 1%;
+}
+.productiMainProduct .productSelector span{
+    margin-right: 1%;
+    cursor: pointer;
 }
 /* 商品欄 */
 .productiMainProduct .productSection{
